--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -129,3 +129,110 @@
     }
   }
 }
+
+//дополнительные стили для попапа дизайн-проектов
+.popup__content--projects {
+  padding: 48px 40px;
+  max-width: 852px;
+  border-radius: 5px;
+  padding-bottom: 0;
+
+  @media (max-width: $tablet-width) {
+    padding: 24px;
+  }
+  @media (max-width: $mobile-max-width) {
+    padding: 16px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .proposal__projects {
+    h2:first-of-type {
+      font-size: 24px;
+      line-height: 28.44px;
+      margin-top: 2px;
+      margin-bottom: 36px;
+
+      @media (max-width: $mobile-max-width) {
+        margin-top: 30px;
+      }
+    }
+
+    h2:last-of-type {
+      font-size: 18px;
+      line-height: 23.4px;
+    }
+  }
+
+  .popup__close-btn {
+    margin-left: auto;
+  }
+
+  .proposal__gallery .gallery__item,
+  .proposal__gallery .gallery__item-link {
+    width: 135px;
+    height: 135px;
+  }
+
+  .proposal__project-desc {
+    width: 502px;
+
+    @media (max-width: $mobile-max-width) {
+      width: 100%;
+    }
+  }
+
+  .proposal__projects {
+    margin-bottom: 0;
+    @media (max-width: $mobile-max-width) {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  .popup__bar {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .button-details {
+    bottom: 35px;
+  }
+
+  .proposal__project:last-child {
+    margin-bottom: 0;
+  }
+
+  .swiper-slide {
+    width: 135px;
+    height: 135px;
+  }
+
+  .proposal__gallery {
+    max-width: 775px;
+    margin: 0;
+
+    @media (max-width: $desktop-width - 1) {
+      //max-width: unset;
+      max-width: 100%;
+    }
+    @media (max-width: $mobile-max-width) {
+      //max-width: unset;
+      max-width: 100%;
+      width: 100%;
+    }
+
+    button {
+      @media (max-width: $mobile-max-width) {
+        width: unset;
+      }
+    }
+  }
+}
+
+.popup__container--update {
+  @media (max-width: $mobile-max-width) {
+    padding-top: 0;
+  }
+}
