--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -62,3 +62,11 @@
     }
   }
 }
+
+//по выбранному радио нельзя кликать
+.form-radio input[type="radio"]:checked ~ label {
+  &::before {
+    border: 6px solid var(--color-interactive-default, $blue-default);
+  }
+  pointer-events: none;
+}
