--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -1,6 +1,7 @@
 .project-vote {
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: $border-radius;
+  z-index: 1000;
 }
 
 .project-vote__container {
