--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -451,3 +451,37 @@
     display: none;
   }
 }
+
+.project-vote__choose-project {
+  color: $grey;
+  font-size: 13px;
+  line-height: 16.9px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: none;
+}
+
+.project-vote__marked {
+  margin: 0;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  a {
+    text-decoration: none;
+    color: $blue-default;
+    font-size: 15px;
+    line-height: 20.25px;
+    font-weight: 400;
+    padding-bottom: 2px;
+    border-bottom: 1px dashed $blue-default;
+  }
+
+  svg {
+    margin-right: 8px;
+    fill: white;
+  }
+}
+
+.project-vote__choose-btn {
+  margin-top: 20px;
+}
