--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "plugins/simplebar";
 
 /* Блоки */
+@import "blocks/form-checkbox-update";
 @import "blocks/logo-link";
 @import "blocks/link-arrow";
 @import "blocks/link";
