--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1133,3 +1133,15 @@
     }
   }
 }
+
+.proposal__project--active {
+  &::after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    bottom: 30px;
+    left: 8px;
+    background: $blue-default;
+    width: 2px;
+  }
+}
