--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1156,10 +1156,10 @@
   }
 }
 
-<<<<<<< HEAD
 .proposal--aside .buttons-wrapper {
   grid-area: j;
-=======
+}
+
 .proposal__project--active {
   &::after {
     content: "";
@@ -1170,5 +1170,4 @@
     background: $blue-default;
     width: 2px;
   }
->>>>>>> improvement-master
 }
