Подправляет код в proposal от пердыдущего конфликта

--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1156,10 +1156,9 @@
   }
 }
 
-<<<<<<< HEAD
 .proposal--aside .buttons-wrapper {
   grid-area: j;
-=======
+}
 .proposal__project--active {
   &::after {
     content: "";
@@ -1170,5 +1169,4 @@
     background: $blue-default;
     width: 2px;
   }
->>>>>>> improvement-master
 }
