Подправляет попап на мобиле, убирает лапку с подписи вы проголосовали, корректирует альтернативу лайка - чекбоксы на мобиле

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -142,7 +142,7 @@
   }
   @media (max-width: $mobile-max-width) {
     padding: 16px;
-    padding-left: 0;
+    //padding-left: 0;
     padding-right: 0;
   }
 
