--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -136,6 +136,7 @@
   max-width: 852px;
   border-radius: 5px;
   padding-bottom: 0;
+  margin: 0 auto;
 
   @media (max-width: $tablet-width) {
     padding: 24px;
