--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -360,6 +360,7 @@
 
   @media (max-width: $tablet-width) {
     justify-content: space-around;
+    margin-right: 16px;
   }
 
   @media (max-width: 415px) {
@@ -425,6 +426,17 @@
 
   @media (max-width: $tablet-width) {
     margin-right: 0;
+    font-size: 16px;
+    padding-bottom: 5px;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 415px) {
+    //margin-right: 20px;
+    //margin-right: 0;
+    font-size: 16px;
+    padding-bottom: 5px;
+    margin: 0 auto;
   }
 
   @media (max-width: 415px) {
