Вносит правки по новым багам клиентского баг-листа

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -177,6 +177,7 @@
 
   .proposal__project-desc {
     width: 502px;
+    width: 100%;
 
     @media (max-width: $mobile-max-width) {
       width: 100%;
