добавляет слайдер с полными изображениями в попапе

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -139,6 +139,7 @@
 @import "blocks/popup";
 @import "blocks/gallery";
 @import "blocks/gallery-popup";
+@import "blocks/gallery-full";
 
 // header
 @import "blocks/page-header";
