--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -31,6 +31,21 @@
   &:hover:not(.focus-visible) {
     opacity: 0.6;
   }
+
+  &.active {
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      border: 2px solid $blue-default;
+      border-radius: $border-radius;
+      pointer-events: none;
+    }
+  }
 }
 
 .gallery__item {
