--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1218,3 +1218,14 @@
     }
   }
 }
+
+.project__gallery-full {
+  margin-left: 32px;
+  margin-top: 16px;
+  width: calc(100% - 32px);
+
+  @media (max-width: $mobile-max-width) {
+    width: 100%;
+    margin-left: 0;
+  }
+}
