Поправляет элементы в попапе, показывает синие кнопки проголосовать на страницах и в попапе

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -231,6 +231,12 @@
       }
     }
   }
+
+  .proposal__project-mark {
+    @media (max-width: $mobile-max-width) {
+      margin-left: 0;
+    }
+  }
 }
 
 .popup__container--update {
