--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -232,16 +232,15 @@
     }
   }
 
-<<<<<<< HEAD
   .proposal__project-mark {
     @media (max-width: $mobile-max-width) {
       margin-left: 0;
     }
-=======
+  }
+
   .gallery-full__item {
     width: 100%;
     height: 300px;
->>>>>>> improvement-master
   }
 }
 
