--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -141,6 +141,7 @@
   @media (max-width: $tablet-width) {
     padding: 24px;
   }
+
   @media (max-width: $mobile-max-width) {
     padding: 16px;
     //padding-left: 0;
@@ -232,16 +233,14 @@
     }
   }
 
-<<<<<<< HEAD
   .proposal__project-mark {
     @media (max-width: $mobile-max-width) {
       margin-left: 0;
     }
-=======
+  }
   .gallery-full__item {
     width: 100%;
     height: 300px;
->>>>>>> improvement-master
   }
 }
 
