Убирает ховер у активной кнопки свернуть, выравнивает вправо

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -201,6 +201,7 @@
 
   .button-details {
     bottom: 35px;
+    margin-left: 32px;
   }
 
   .proposal__project:last-child {
@@ -238,10 +239,7 @@
       margin-left: 0;
     }
   }
-<<<<<<< HEAD
-=======
 
->>>>>>> improvement-master
   .gallery-full__item {
     width: 100%;
     height: 300px;
