--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -202,6 +202,10 @@
   .button-details {
     bottom: 35px;
     margin-left: 32px;
+
+    @media (max-width: $mobile-max-width) {
+      margin-left: 0;
+    }
   }
 
   .proposal__project:last-child {
