--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1238,9 +1238,14 @@
   margin-left: 32px;
   margin-top: 16px;
   width: calc(100% - 32px);
+  display: none;
 
   @media (max-width: $mobile-max-width) {
-    width: 100%;
     margin-left: 0;
+    width: calc(100% - 16px);
+  }
+
+  .opened + & {
+    display: block;
   }
 }
