--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -691,23 +691,36 @@
     }
 
     &:after {
+      content: "";
       position: absolute;
-      bottom: -0.4rem;
+      //top: -48px;
       left: 0;
-
       width: 100%;
-      height: 2rem;
-
-      background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0),
-        var(--color-bg-secondary, $color-bg) 100%
-      );
-
-      text-align: right;
-
-      content: '';
+      height: 48px;
+      background-image: linear-gradient(180deg, var(--color-bg-main, $white) 0%, var(--color-bg-main-transparent, rgba($white, 0)) 100%);
+      transform: matrix(1, 0, 0, -1, 0, 0);
+      bottom: 50px;
+      bottom: 0;
     }
+
+    // &:after {
+    //   position: absolute;
+    //   bottom: -0.4rem;
+    //   left: 0;
+
+    //   width: 100%;
+    //   height: 2rem;
+
+    //   background: linear-gradient(
+    //     to bottom,
+    //     rgba(255, 255, 255, 0),
+    //     var(--color-bg-secondary, $color-bg) 100%
+    //   );
+
+    //   text-align: right;
+
+    //   content: '';
+    // }
   }
 
   &_enough-lines_true {
