--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -203,7 +203,7 @@
     bottom: 35px;
     margin-left: 32px;
 
-    @media (max-width: $mobile-max-width) {
+    @include mobile {
       margin-left: 0;
     }
   }
@@ -239,7 +239,7 @@
   }
 
   .proposal__project-mark {
-    @media (max-width: $mobile-max-width) {
+    @include mobile {
       margin-left: 0;
     }
   }
