--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -631,7 +631,8 @@
     @media (max-width: $tablet-width) {
       margin-left: 30px;
     }
-    @media (max-width: $mobile-max-width) {
+
+    @include mobile {
       margin-left: 0;
       width: unset;
     }
@@ -834,7 +835,7 @@
     &.opened {
       margin-top: 32px;
 
-      @media (max-width: $mobile-max-width) {
+      @include mobile {
         margin-left: 0;
 
         //margin-left: 16px;
@@ -882,7 +883,7 @@
       width: 100%;
     }
 
-    @media (max-width: $mobile-max-width) {
+    @include mobile {
       padding-left: 0;
       width: 100%;
     }
@@ -983,7 +984,7 @@
     margin-top: -20px;
     margin-left: 32px;
 
-    @media (max-width: $mobile-max-width) {
+    @include mobile {
       margin-left: 0;
       margin-top: 0;
     }
@@ -1253,9 +1254,9 @@
   width: calc(100% - 32px);
   display: none;
 
-  @media (max-width: $mobile-max-width) {
+  @include mobile {
     margin-left: 0;
-    width: calc(100% - 16px);
+    width: 100%;
   }
 
   .opened + & {
