--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -242,7 +242,23 @@
     opacity: 0.7;
   }
 }
+.project-vote__number {
+  width: 100%;
+  margin-top: 24px;
+  padding-top: 25px;
 
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+
+  border-top: 1px solid var(--color-stroke, $light-grey);
+
+  margin-right: 12px;
+  font-weight: 500;
+  font-size: rem(15px);
+  line-height: 135%;
+}
 .project-vote__like-counter {
   width: 100%;
   margin-top: 24px;
@@ -459,6 +475,7 @@
   line-height: 16.9px;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-bottom: 0;
   display: none;
 }
 
