--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -376,7 +376,11 @@
     justify-content: space-between;
   }
 }
-
+// .proposal {
+//   form {
+//     grid-area: h;
+//   }
+// }
 .proposal__projectstab,
 .proposal__milestonestab {
   @media (min-width: $desktop-width) {
@@ -408,6 +412,7 @@
 .proposal__tab-item--active {
   @media (min-width: $desktop-width) {
     visibility: visible;
+    //z-index: 100;
   }
   height: auto;
   visibility: visible;
@@ -532,7 +537,16 @@
     }
   }
 
+  .proposal__item-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: $border-radius;
+  }
+
   .proposal__project-figure {
+    margin: 0;
     @media (max-width: $tablet-width) {
       width: 100%;
     }
@@ -993,6 +1007,8 @@
     }
 
     svg {
+      width: 14px;
+      height: 8px;
       transform: rotate(-180deg);
     }
   }
@@ -1032,7 +1048,7 @@
     }
   }
 
-  h3 {
+  .proposal__milestones-title {
     margin: 0;
     font-size: 18px;
     line-height: 23.4px;
@@ -1078,7 +1094,7 @@
     color: $dark-text;
   }
 
-  span {
+  .proposal__project-votes {
     font-size: 13px;
     line-height: 16.9px;
     color: $grey;
@@ -1155,7 +1171,7 @@
     }
   }
 
-  time {
+  .proposal__milestones-date {
     font-size:  rem(14px);
     line-height: rem(18.2px);
     font-weight: 500;
@@ -1171,13 +1187,6 @@
 
 .proposal__variant-wrapper {
   display: flex;
-}
-
-.proposal__like-wrapper {
-  align-items: center;
-  //display: none;
-  display: flex;
-  align-items: center;
 }
 
 .proposal__project-mark {
