--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -409,6 +409,12 @@
   }
 }
 
+.proposal__tab-item {
+  .form-radio label::before {
+    display: none;
+  }
+}
+
 .proposal__tab-item--active {
   @media (min-width: $desktop-width) {
     visibility: visible;
@@ -416,6 +422,10 @@
   }
   height: auto;
   visibility: visible;
+
+  .form-radio label::before {
+    display: block;
+  }
 }
 
 .proposal__tabs .proposal__tab {
@@ -1270,6 +1280,10 @@
   @include mobile {
     margin-left: 0;
     width: 100%;
+  }
+
+  @media (max-width: $mobile-max-width) {
+    width: calc(100% - 16px);
   }
 
   .opened + & {
