--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -844,6 +844,8 @@
     }
 
     .button-details__icon {
+      width: 14px;
+      height: 8px;
       transform: rotate(0deg);
     }
 
@@ -865,6 +867,8 @@
       }
 
       .button-details__icon {
+        width: 14px;
+        height: 8px;
         transform: rotate(180deg);
       }
 
@@ -1207,16 +1211,16 @@
   }
 
   svg {
+    width: 24px;
+    height: 24px;
     margin-right: 10px;
   }
 
-  span {
-    font-size: 18px;
-    line-height: 23.4px;
+  font-size: 18px;
+  line-height: 23.4px;
 
-    @media (max-width: $mobile-max-width) {
-      font-size: 14px;
-    }
+  @media (max-width: $mobile-max-width) {
+    font-size: 14px;
   }
 }
 
