Изменяет стили в блоке табов

--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -385,10 +385,12 @@
 .proposal__milestonestab {
   @media (min-width: $desktop-width) {
     grid-area: h;
-    visibility: hidden;
+    //visibility: hidden;
+    display: none;
   }
-  height: 0;
-  visibility: hidden;
+  //height: 0;
+  //visibility: hidden;
+  display: none;
 
   @media (max-width: $tablet-width) {
     //margin-left: 16px;
@@ -417,11 +419,12 @@
 
 .proposal__tab-item--active {
   @media (min-width: $desktop-width) {
-    visibility: visible;
+    //visibility: visible;
     //z-index: 100;
+    display: block;
   }
-  height: auto;
-  visibility: visible;
+  //height: auto;
+  //visibility: visible;
 
   .form-radio label::before {
     display: block;
