--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -138,6 +138,19 @@
   padding-bottom: 0;
   margin: 0 auto;
 
+  .proposal {
+    padding-top: 0;
+    padding-left: 0;
+  }
+
+  .proposal__project-title {
+    max-width: 250px;
+
+    @media (max-width: $tablet-width) {
+      max-width: unset;
+    }
+  }
+
   @media (max-width: $tablet-width) {
     padding: 24px;
   }
