--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -571,6 +571,7 @@
   .proposal__project-img {
     //margin-left: auto;
     margin-left: 40px;
+    margin-bottom: 16px;
 
     @media (max-width: $tablet-width) {
       margin-left: unset;
