правит баги, доп 37

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -133,6 +133,7 @@
 //дополнительные стили для попапа дизайн-проектов
 .popup__content--projects {
   padding: 48px 40px;
+  width: 100%;
   max-width: 852px;
   border-radius: 5px;
   padding-bottom: 0;
