--- a/source/sass/blocks/gallery-full.scss
+++ b/source/sass/blocks/gallery-full.scss
@@ -68,3 +68,12 @@
     color: var(--color-interactive-accent, $blue-accent);
   }
 }
+
+.gallery-full__image {
+  img {
+    display: block;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+}
