--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,6 +7,11 @@
   background-repeat: no-repeat;
   background-size: 100% 1px;
 
+  &:last-child {
+    background-image: unset;
+    padding-bottom: 0;
+  }
+
 
   @media (max-width: $mobile-max-width) {
     padding-top: 24px;
