--- a/source/sass/blocks/poll-result.scss
+++ b/source/sass/blocks/poll-result.scss
@@ -45,6 +45,8 @@
   padding-bottom: 9px;
   padding-left: 18px;
   padding-right: 16px;
+  position: relative;
+  z-index: 2;
 
   @include main-text;
   border-radius: 5px;
