--- a/source/sass/blocks/preview-input.scss
+++ b/source/sass/blocks/preview-input.scss
@@ -68,6 +68,11 @@
   &--no-content {
     border: none;
     min-height: unset;
+    transition: opacity ease-out 0.15s;
+
+    &:hover {
+      opacity: 0.7;
+    }
   }
 }
 
