правки по баглисту

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -29,6 +29,10 @@
   .cards-list {
     margin-bottom: -5px;
 
+    .poll-result & {
+      max-width: 800px;
+    }
+
     @include mobile {
       margin-bottom: 10px;
     }
