--- a/source/sass/blocks/preview-input.scss
+++ b/source/sass/blocks/preview-input.scss
@@ -70,6 +70,10 @@
     min-height: unset;
     transition: opacity ease-out 0.15s;
 
+    .form__section & {
+      background-color: transparent;
+    }
+
     &:hover {
       opacity: 0.7;
     }
