--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -7,7 +7,6 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 19px;
-  z-index: 99;
 
   .scrollbar-track {
     width: 10px;
@@ -80,9 +79,10 @@
 
     background-color: rgba(255, 255, 255, 0);
     border: 1px solid #e3e8ee;
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 5px 5px;
     outline: none;
     cursor: pointer;
+    transition: border 0.3s ease;
 
     &:disabled {
       opacity: 0.3;
@@ -103,6 +103,7 @@
     transform: translateY(100%);
     visibility: hidden;
     opacity: 0;
+    z-index: 99;
 
     transition: visibility 0.3s ease, opacity 0.3s ease;
   }
@@ -130,7 +131,7 @@
       font-weight: 400;
       font-size: 15px;
       line-height: 135%;
-      padding: 16px 49px 16px 16px;
+      padding: 13px 49px 15px 16px;
 
       border: none;
       outline: none;
@@ -145,7 +146,7 @@
     width: 100%;
     max-height: 500px;
     margin: 0;
-    padding: 0;
+    padding: 9px 0 0 0;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -179,6 +180,7 @@
       background-repeat: no-repeat;
       background-position: center;
       background-color: #2c8ecc;
+      border: 1px solid #2c8ecc;
     }
 
     &[aria-selected="true"] {
@@ -264,29 +266,29 @@
 
   &__icon {
     flex-shrink: 0;
-    width: 12px;
+    width: 14px;
     height: 8px;
     margin-left: auto;
 
-    background-color: $blue-default;
 
     transition: transform 0.3s ease;
 
-    clip-path: polygon(100% 0, 100% 30%, 50% 100%, 0 30%, 0 0, 50% 70%);
+    background-image: url("../img/icon-arrow-down.svg");
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   &--search {
     .custom-select__search {
       display: flex;
-    }
-
-    .custom-select__list-box {
-      border: 1px solid #e3e8ee;
-      border-radius: 0 0 5px 5px;
+      border-left: 1px solid #e3e8ee;
+      border-right: 1px solid #e3e8ee;
     }
 
     .custom-select__list {
-      border: none;
+      border: 1px solid #e3e8ee;
+      border-radius: 0 0 5px 5px;
+      border-top: none;
     }
 
     .custom-select__item {
@@ -294,7 +296,7 @@
       font-size: 15px;
       font-weight: 300;
       line-height: 21px;
-      padding: 8px 17px 8px 45px;
+      padding: 8px 17px 9px 45px;
       font-weight: 400;
       font-size: 15px;
       line-height: 135%;
@@ -322,6 +324,10 @@
     .custom-select__list-box {
       visibility: visible;
       opacity: 1;
+    }
+
+    .custom-select__button {
+      border-radius: 5px 5px 0 0;
     }
 
     .custom-select__icon {
