--- a/source/sass/blocks/gallery-full.scss
+++ b/source/sass/blocks/gallery-full.scss
@@ -9,7 +9,8 @@
   }
 }
 
-.gallery-full__item {
+.gallery-full__item,
+.proposal__project .swiper-slide .gallery-full__item {
   width: 100%;
   height: 300px;
   margin: 0;
@@ -69,7 +70,8 @@
   }
 }
 
-.gallery-full__image {
+.gallery-full__image,
+.proposal__project .swiper-slide .gallery-full__image {
   img {
     display: block;
     width: 100%;
